--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -1,15 +1,24 @@
 <header>
-    <a href="/" id="logo">
-        <h1>Omaha School of Ministry</h1>
-        <div class="logo">
-            {{ partial "logo.html" . }}
-        </div>
-    </a>
-    <nav>
-        <a href="/about">About</a>
-        <a href="/academics">Academics</a>
-        <a href="/admissions">Admissions</a>
-        <a href="/flatland">Flatland Church</a>
-        <a href="/current-students">Current Students</a>
-    </nav>
+  <a href="/" id="logo">
+    <h1>Omaha School of Ministry</h1>
+    <div class="logo">{{ partial "logo.html" . }}</div>
+  </a>
+  <nav>
+    <div class="sub-nav">
+      <a href="/give">Calendars</a>
+      <a href="/give">Give</a>
+      <a href="/news">News</a>
+      <a href="/parents">Parents</a>
+      <a href="/search" class="search-button"
+        ><span class="material-symbols-outlined"> search </span> Search</a
+      >
+    </div>
+    <div class="main-nav">
+      <a href="/about">About</a>
+      <a href="/academics">Academics</a>
+      <a href="/admissions">Admissions</a>
+      <a href="/flatland">Flatland Church</a>
+      <a href="/current-students">Current Students</a>
+    </div>
+  </nav>
 </header>
