--- a/layouts/index.html
+++ b/layouts/index.html
@@ -48,7 +48,7 @@
         }}</span
       >
     </div>
-    <div class="">
+    <div class="video">
       <iframe
         src="https://player.vimeo.com/video/{{ .Params.Testimony.Src }}?h=d0d8186058&title=0&byline=0&portrait=0"
         width="640"
