--- a/assets/styles/home.scss
+++ b/assets/styles/home.scss
@@ -159,7 +159,39 @@
   }
 }
 
+.video {
+  width: 100%;
+  aspect-ratio: 16 / 9;
+
+  iframe {
+    width: 100%;
+    height: 100%;
+  }
+}
+
 .news h2 {
   margin-top: 92px;
   margin-bottom: 56px;
+}
+
+@media screen and (max-width: 1024px) {
+  .narrow {
+    padding: 24px;
+  }
+
+  .tagline-box {
+    width: 95%;
+    margin: 0 auto;
+    padding: 24px;
+
+    h2 {
+      font-size: 32px;
+    }
+  }
+
+  .testimony .content,
+  .next-step .row,
+  .grid {
+    grid-template-columns: minmax(0, 1fr);
+  }
 }
