feat: added all pages linked from the homepage

--- a/layouts/index.html
+++ b/layouts/index.html
@@ -64,21 +64,21 @@
   <h2>Producing Highly-Qualified Ministers</h2>
   <p>{{ .Params.Academics }}</p>
   <div class="grid">
-    <a href="/omaha" class="box">
+    <a href="/academics" class="box">
       <img
         src="https://images.unsplash.com/photo-1524178232363-1fb2b075b655?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=300&q=80"
         alt="Students in a classroom"
       />
       <h3>Academics</h3>
     </a>
-    <a href="/spiritual-life" class="box">
+    <a href="/ordination" class="box">
       <img
         src="https://images.unsplash.com/photo-1520857014576-2c4f4c972b57?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=300&q=80"
         alt="Ordination service"
       />
       <h3>Credentialing &amp; Ordination Track</h3>
     </a>
-    <a href="/student-experience" class="box">
+    <a href="/ministry" class="box">
       <img
         src="https://live.staticflickr.com/65535/52404165552_33a1ccb41a_3k.jpg"
         alt="Students walking on campus"
