--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -39,7 +39,7 @@
       <a href="/current-students">Current Students</a>
     </div>
     <div class="sub-nav">
-      <a href="/give">Calendars</a>
+      <a href="/calendars">Calendars</a>
       <a href="/give">Give</a>
       <a href="/news">News</a>
       <a href="/parents">Parents</a>
