--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -3,7 +3,8 @@
   <head>
     <title>{{ partial "title.html" . }}</title>
     <meta charset="utf-8" />
-    <meta name="robots" content="index, follow" />
+    <!-- TODO: remove before flight -->
+    <meta name="robots" content="noindex,nofollow" />
     <meta
       name="viewport"
       content="width=device-width,initial-scale=1,shrink-to-fit=no,user-scalable=no"
@@ -12,7 +13,7 @@
       rel="stylesheet"
       href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0"
     />
-    <script src="https://kit.fontawesome.com/70268be1d2.js" crossorigin="anonymous"></script>
+    <script async src="https://kit.fontawesome.com/70268be1d2.js" crossorigin="anonymous"></script>
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
