--- a/layouts/index.html
+++ b/layouts/index.html
@@ -78,7 +78,7 @@
       />
       <h3>Credentialing &amp; Ordination Track</h3>
     </a>
-    <a href="/ministry" class="box">
+    <a href="/flatland" class="box">
       <img
         src="https://live.staticflickr.com/65535/52404165552_33a1ccb41a_3k.jpg"
         alt="Students walking on campus"
