--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -13,7 +13,7 @@
         <ul>
           <li><a href="/contact">Contact Us</a></li>
           <li><a href="/careers">Careers</a></li>
-          <li><a href="/non-discrimination">Non-Discrimination</a></li>
+          <li><a href="/policies/non-discrimination">Non-Discrimination</a></li>
           <li><a href="/policies">Policies</a></li>
         </ul>
       </div>
@@ -42,8 +42,8 @@
     &copy; <span id="year"></span> Omaha School of Ministry. All rights reserved. 501(c)3 87-2875388
   </p>
   <div class="footer-row">
-    <a href="/privacy">Privacy Policy</a>
-    <a href="/terms">Terms of Use</a>
+    <a href="/policies/privacy">Privacy Policy</a>
+    <a href="/policies/terms">Terms of Use</a>
   </div>
 </div>
 <script>
