--- a/assets/styles/header.scss
+++ b/assets/styles/header.scss
@@ -88,9 +88,10 @@ nav .main-nav {
   right: 0;
   box-shadow: none;
   transform: translateX(101%);
+  width: 360px;
 
   &.open {
-    box-shadow: 0 0 24px 36px rgba(0, 0, 0, 0.2);
+    box-shadow: 0 0 24px 4px rgba(0, 0, 0, 0.2), 0 0 300px 500px rgba(0, 0, 0, 0.2);
     transform: translateX(0);
   }
 
