--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -5,8 +5,8 @@
   </a>
   <nav>
     <div class="sub-nav">
-      <a href="/give">Calendars</a>
-      <a href="/give">Give</a>
+      <a href="/calendars">Calendars</a>
+      <a href="https://flatland.churchcenter.com/giving">Give</a>
       <a href="/news">News</a>
       <a href="/parents">Parents</a>
       <a href="/search" class="search-button"
@@ -40,7 +40,7 @@
     </div>
     <div class="sub-nav">
       <a href="/calendars">Calendars</a>
-      <a href="/give">Give</a>
+      <a href="https://flatland.churchcenter.com/giving">Give</a>
       <a href="/news">News</a>
       <a href="/parents">Parents</a>
     </div>
