feat: added policies page - Added ada policy

--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -21,7 +21,7 @@
         <h3>Future Students</h3>
         <ul>
           <li><a href="/visit">Schedule a Visit</a></li>
-          <li><a href="/directions">Directions</a></li>
+          <li><a href="/contact">Directions</a></li>
           <li><a href="/info">Request Info</a></li>
           <li><a href="/apply">Apply</a></li>
         </ul>
