--- a/assets/styles/page.scss
+++ b/assets/styles/page.scss
@@ -36,6 +36,45 @@
     }
   }
 
+  .image-block {
+    width: 100%;
+    padding: 140px 0;
+    position: relative;
+
+    img {
+      width: 100%;
+      display: block;
+      object-fit: cover;
+      position: absolute;
+      object-position: right;
+      height: 100%;
+      top: 0;
+    }
+
+    h1 {
+      position: absolute;
+      bottom: 50%;
+      transform: translateY(50%);
+      color: #fff;
+      z-index: 100;
+      max-width: 960px;
+      margin: 0 auto;
+      padding: 0 24px;
+      left: calc(50% - 480px);
+    }
+  }
+
+  .image-block::after {
+    content: '';
+    width: 100%;
+    height: 100%;
+    background: var(--blue);
+    opacity: 0.5;
+    top: 0;
+    position: absolute;
+    z-index: 10;
+  }
+
   .body {
     padding: 0 0 48px;
   }
