--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -6,7 +6,7 @@
   <nav>
     <div class="sub-nav">
       <a href="/calendars">Calendars</a>
-      <a href="https://flatland.churchcenter.com/giving">Give</a>
+      <a href="/give">Give</a>
       <a href="/news">News</a>
       <a href="/parents">Parents</a>
       <a href="/search" class="search-button"
@@ -16,7 +16,7 @@
     <div class="main-nav">
       <a href="/about">About</a>
       <a href="/academics">Academics</a>
-      <a href="/admissions">Admissions</a>
+      <a href="/apply">Admissions</a>
       <a href="/flatland">Flatland Church</a>
       <a href="/current-students">Current Students</a>
     </div>
@@ -34,13 +34,13 @@
     <div class="main-nav">
       <a href="/about">About</a>
       <a href="/academics">Academics</a>
-      <a href="/admissions">Admissions</a>
+      <a href="/apply">Admissions</a>
       <a href="/flatland">Flatland Church</a>
       <a href="/current-students">Current Students</a>
     </div>
     <div class="sub-nav">
       <a href="/calendars">Calendars</a>
-      <a href="https://flatland.churchcenter.com/giving">Give</a>
+      <a href="/give">Give</a>
       <a href="/news">News</a>
       <a href="/parents">Parents</a>
     </div>
