feat: added academics page

--- a/assets/styles/main.scss
+++ b/assets/styles/main.scss
@@ -39,3 +39,9 @@ a {
 @import 'page';
 @import 'mentors';
 @import 'location';
+
+.application-form {
+  max-width: 640px;
+  width: 100%;
+  margin: 0 auto;
+}
