--- a/layouts/index.html
+++ b/layouts/index.html
@@ -1,4 +1,21 @@
 {{ define "title" }} Omaha School of Ministry {{ end }} {{ define "main" }}
+<script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "CollegeOrUniversity",
+    "url": "https://omasom.com",
+    "name": "{{ $.Site.Title }}",
+    "alternateName": "OSM",
+    "logo": "https://omasom.com/logo.png",
+    "description": "{{ .Params.TheologyStatement }}",
+    "contactPoint": {
+      "@type": "ContactPoint",
+      "telephone": "+1-402-492-9111",
+      "contactType": "Admissions"
+    },
+    "sameAs": ["https://www.instagram.com/omahaschoolofministry/"]
+  }
+</script>
 <div class="narrow tagline">
   <div class="tagline-box">
     <h2>{{ .Params.Tagline | safeHTML }}</h2>
@@ -24,17 +41,11 @@
       <h3>Living in Omaha</h3>
     </a>
     <a href="/spiritual-life" class="box">
-      <img
-        src="https://images.unsplash.com/photo-1526746323784-6bc814d79273?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=300&q=80"
-        alt="Prayer service"
-      />
+      <img src="/53070680636_37ecff4909_w.jpg" alt="Prayer service" />
       <h3>Spiritual Life</h3>
     </a>
     <a href="/student-experience" class="box">
-      <img
-        src="https://images.unsplash.com/photo-1549057446-9f5c6ac91a04?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=300&q=80"
-        alt="Students walking on campus"
-      />
+      <img src="/52437241567_2f6aa8fb54_w.jpg" alt="Students walking on campus" />
       <h3>Student Experience</h3></a
     >
   </div>
@@ -65,17 +76,11 @@
   <p>{{ .Params.Academics }}</p>
   <div class="grid">
     <a href="/academics" class="box">
-      <img
-        src="https://images.unsplash.com/photo-1524178232363-1fb2b075b655?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=300&q=80"
-        alt="Students in a classroom"
-      />
+      <img src="/53078115253_3b4676c9c3_w.jpg" alt="Students in a classroom" />
       <h3>Academics</h3>
     </a>
     <a href="/ordination" class="box">
-      <img
-        src="https://images.unsplash.com/photo-1520857014576-2c4f4c972b57?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=300&q=80"
-        alt="Ordination service"
-      />
+      <img src="/52919264017_7a70b5ea1a_w.jpg" alt="Ordination service" />
       <h3>Credentialing &amp; Ordination Track</h3>
     </a>
     <a href="/flatland" class="box">
