--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -30,7 +30,7 @@
         <h3>Current Students</h3>
         <ul>
           <li><a href="/calendars">Calendars</a></li>
-          <li><a href="https://canvas.instructure.com/">Learning Portal</a></li>
+          <li><a href="https://osm.populiweb.com/">Learning Portal</a></li>
           <li><a href="/catalog">Catalog</a></li>
         </ul>
       </div>
