--- a/assets/styles/home.scss
+++ b/assets/styles/home.scss
@@ -1,5 +1,5 @@
 .tagline {
-  margin: 98px auto;
+  margin: 98px auto 175px;
   position: relative;
 
   img {
@@ -39,11 +39,24 @@
   font-weight: 600;
   text-align: center;
 
+  p {
+    line-height: 2;
+    font-size: 18px;
+    text-align: left;
+    max-width: 960px;
+    width: 100%;
+    margin: 0 auto;
+    color: #fffe;
+  }
+
   a {
     color: #fff;
     text-decoration: none;
     padding: 12px 16px;
     border: 2px solid #fff;
+    display: block;
+    width: max-content;
+    margin: 24px auto 0;
   }
 
   a:hover {
@@ -62,16 +75,16 @@
 
   .row {
     display: grid;
-    grid-template-columns: repeat(3, minmax(0, 1fr));
+    grid-template-columns: repeat(3, minmax(0, max-content));
     max-width: 960px;
-    width: 100%;
+    width: max-content;
     margin: 32px auto;
     grid-gap: 12px;
   }
 
   p {
     width: 100%;
-    max-width: 640px;
+    max-width: 960px;
     margin: 48px auto;
     text-align: left;
     color: #fff;
