feat: updated tagline

--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -30,8 +30,8 @@
         <h3>Current Students</h3>
         <ul>
           <li><a href="/calendars">Calendars</a></li>
-          <li><a href="https://osm.populiweb.com/">Learning Portal</a></li>
-          <li><a href="/catalog">Catalog</a></li>
+          <li><a href="https://osm.populiweb.com/">Populi Login</a></li>
+          <li><a href="/academics">Catalog</a></li>
         </ul>
       </div>
     </div>
