--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -12,7 +12,7 @@
         <h3>Helpful Links</h3>
         <ul>
           <li><a href="/contact">Contact Us</a></li>
-          <li><a href="/careers">Careers</a></li>
+          <li><a href="/tuition">Tuition and Scholarships</a></li>
           <li><a href="/policies/non-discrimination">Non-Discrimination</a></li>
           <li><a href="/policies">Policies</a></li>
         </ul>
