--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -1,13 +1,14 @@
 <header>
   <a href="/" id="logo">
-    <h1>Omaha School of Ministry</h1>
-    <div class="logo">{{ partial "logo.html" . }}</div>
+    <div class="logo">
+      {{ partial "logo.html" . }}
+    </div>
+    <h1><span class="omaha">Omaha</span> <span class="som">School of Ministry</span></h1>
   </a>
   <nav>
     <div class="sub-nav">
       <a href="/calendars">Calendars</a>
       <a href="/give">Give</a>
-      <a href="/news">News</a>
       <a href="/parents">Parents</a>
       <a href="/search" class="search-button"
         ><span class="material-symbols-outlined"> search </span> Search</a
@@ -41,7 +42,6 @@
     <div class="sub-nav">
       <a href="/calendars">Calendars</a>
       <a href="/give">Give</a>
-      <a href="/news">News</a>
       <a href="/parents">Parents</a>
     </div>
   </div>
